# tagberry

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yaml
resources/: icons.qrc
resources/desktop/: tagberry-qt.desktop
scripts/: format.sh
src/: main.cpp  sanitizers.cpp
src/models/: ColorScheme.cpp  ColorScheme.hpp  Record.cpp  Record.hpp  RecordSet.cpp  RecordSet.hpp  RecordsDirectory.cpp  RecordsDirectory.hpp  Root.cpp  Root.hpp  Tag.cpp  Tag.hpp  TagsDirectory.cpp  TagsDirectory.hpp
src/presenters/: CalendarArea.cpp  CalendarArea.hpp  MainWindow.cpp  MainWindow.hpp  RecordsArea.cpp  RecordsArea.hpp
src/storage/: LocalStorage.cpp  LocalStorage.hpp  Migrator.cpp  Migrator.hpp
src/storage/migrations/: 01_CreateTables.cpp  01_CreateTables.hpp  02_AddRecordState.cpp  02_AddRecordState.hpp  03_AddRecordDescription.cpp  03_AddRecordDescription.hpp
src/widgets/: Calendar.cpp  Calendar.hpp  CalendarCell.cpp  CalendarCell.hpp  CalendarSwitch.cpp  CalendarSwitch.hpp  Cell.cpp  Cell.hpp  CheckBox.cpp  CheckBox.hpp  FlowLayout.cpp  FlowLayout.hpp  LineEdit.cpp  LineEdit.hpp  MarkdownEdit.cpp  MarkdownEdit.hpp  MultirowCell.cpp  MultirowCell.hpp  RecordCell.cpp  RecordCell.hpp  RecordEdit.cpp  RecordEdit.hpp  RecordList.cpp  RecordList.hpp  TagCalendar.cpp  TagCalendar.hpp  TagCounter.cpp  TagCounter.hpp  TagCounterCalendar.cpp  TagCounterCalendar.hpp  TagLabel.cpp  TagLabel.hpp  TagListEdit.cpp  TagListEdit.hpp  TagSelector.cpp  TagSelector.hpp
